--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
-streamlit
+altair==4.1.0
+biopython==1.78
+cobra==0.29.0
+dash==2.17.1
+dash_bio==1.0.2
+dash_bootstrap_components==1.6.0
+ipython==8.12.3
 matplotlib==3.3.3
 matplotlib-inline==0.1.3
 matplotlib-venn==0.11.6
-seaborn==0.9.0
-ipython==7.29.0
-biopython==1.78
-pandas==1.1.4
 numpy==1.19.4
-backports.os==0.1.1
+pandas==1.4.4
+Pillow==9.5.0
+plotly==5.23.0
 reportlab==3.6.2
-altair==4.1.0
+scikit_learn==1.3.2
+seaborn==0.9.0
+streamlit==1.24.1
